jupyter data analysis

--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /home/jovyan
 COPY config/jupyter_notebook_config.py .jupyter/jupyter_notebook_config.py
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
+COPY data data
 COPY notebooks notebooks
